# tracing_agents

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  otel-collector-config.yaml  prometheus-docker.yml  prometheus.yml  pyproject.toml
docs/: OTEL_ATTRIBUTES.md
prompts/system/: base.md
schemas/: tools_input.py  tools_output.py
src/: agents.py  main.py  telemetry.py  tools.py
